<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">App</string>

    <string name="install_termos">Install Termos</string>
    <string name="installfm">Install FM+</string>
    <string name="installaurora">Install Aurora Store</string>
    <string name="deletepkg">Удалить приложения</string>
    <string name="installnewpipe">Установить NewPipe</string>
    <string name="installjob">Установить Ozon Job</string>
    <string name="installtc">Установить Total Commander</string>
    <string name="installozonbank">Установить Ozon Bank</string>
    <string name="installsberbank">Установить Sberbank</string>
    <string name="installtelegram">Установить Telegram </string>
    <string name="installgnucashgpg" tools:ignore="Typos"> Скачать definitly.gnucash.gpg </string>
    <string name="installgnucash">Установить Gnucash </string>
    <string name="installkeychain">Установить Keychain </string>
    <string name="downloadnote">Скачать Note </string>
    <string name="installdpi">Установить BYEBYEDPI </string>
    <string name="installsports">Установить Sports </string>
    <string name="intallgesture">Установить Gesture </string>
    <string name="installhacker">Установить Hacker </string>
    <string name="installzepp">Установить Zepp Life</string>
    <string name="installmpv">Установить MPV</string>
    <string name="intallray">Установить v2rayNG </string>
    <string name="downloadbusybox">Установить Busybox,Curl и OpenSSL </string>
    <string name="installtermosplus">Установить TermOne Plus </string>
    <string name="apatch">Установить APatch</string>
    <string name="downloadksuzip">Скачать APatch-KSU.zip  </string>
    <string name="installkernelsu">Установить KernelSU </string>
    <string name="installopenssl">Установить OpenSSL </string>
    <string name="installgh">Установить GH </string>
    <string name="downloadmain">Скачать main.tar.gz </string>
    <string name="unpackmain">Распаковать main.tar.gz </string>
    <string name="gitclonedcim">Клонирование DCIM </string>
    <string name="copydcim">Копирование DCIM </string>
    <string name="installgit">Установить GIT </string>
    <string name="installgnupg">Установить GnuPG </string>
    <string name="installcore">Уставновить Core Music Player </string>
    <string name="installpluma">Установить Pluma </string>
    <string name="installtelegramx">Установить Telegram X  </string>
    <string name="install3c">Установить 3C Task Manager </string>
    <string name="install3с"> Установить 3C Task Manager </string>
    <string name="decryptgnucashgpg">Расшифровать gnucashpgp </string>
    <string name="installk9mail">Установить K-9 Mail </string>
    <string name="installgoogleauth">Установить Google Authenticator </string>
    <string name="installyandexmap">Установить Yandex Map  </string>
    <string name="installfdroid">Установить  F Droid </string>
    <string name="downloadapk">Скачать и установить APK </string>
    <string name="setsettings">Установить настройки</string>
    <string name="installapk">Установить APK </string>
    <string name="download_gate">Скачать Gate </string>
    <string name="installgate">Установить Gate </string>
    <string name="reboot">Перегрузить  </string>
    <string name="installbinance">Установить Binance </string>
    <string name="installssh">Установить OpenSSH </string>
    <string name="installsshlibs">Установить SSH LIBS </string>
    <string name="installtermoplus">Установить TermOne Plus </string>
    <string name="donloadplumaprofile">Скачать Pluma profile </string>
    <string name="installplumaprofile">Установить Pluma profile </string>
    <string name="installray">Установить V2rayNG </string>
    <string name="button_clone">Клонировать </string>
    <string name="poweroff">Выключить  </string>
    <string name="deletegnucashgpg" tools:ignore="Typos">Удалить definitly.gnucash и definitly.gnucash.gpg </string>
    <string name="deletemain">Удалить main.tar.gz и main folder  </string>
    <string name="downloadk9mailprofile">Скачать k9mail profile </string>
    <string name="installk9mailprofile">Установить k9mail profile </string>
    <string name="openssl_decryptor">OpenSSL Decryptor</string>
    <string name="no_file_selected">No file selected</string>
    <string name="select_encrypted_file">Select Encrypted File</string>
    <string name="enter_password">Enter password</string>
    <string name="decrypt_file">Decrypt File</string>
    <string name="btnSelectFile">Выбрать зашифрованый файл </string>
    <string name="loading">Loading…</string>
    <string name="btnDecrypt">Расшифровать файл </string>
    <string name="downloadtelegramprofile">Скачать org.thunderdog.challegram </string>
    <string name="installtelegramprofile">Установить org.thunderdog.challegram </string>
    <string name="installvcore"> Установить vcore</string>
    <string name="installelektichka">Установить Яндекс электричка </string>
    <string name="installpython3">Установить python3  </string>
    <string name="installenvpython3"> Создание виртуального окружения python3 </string>
    <string name="installpippython3">Установка PIP </string>
    <string name="installytdlp">Установка yt-dlp </string>
    <string name="installautoapk">Автоматическая установка APK </string>
    <string name="kernelsetup">Установить  APatch-KSU.zip</string>
    <string name="install_kermelsu">Установка KernelSU </string>
    <string name="messageDecrypt">Расшифровать сообщение </string>
    <string name="enter_message">Введите  сюда свою зашифрованную строку </string>
    <string name="setwallpaper">Установить обои </string>
    <string name="installmetamask">Установить MetaMask </string>
    <string name="downloadmetamaskprofile">Скачать metamask profile </string>
    <string name="installmetamaskprofile"> Утановить metamask profile</string>
    <string name="installtermux">Установить Termux</string>
    <string name="deletegmspkg">Удалить GMS</string>
    <string name="installlibretube">Установка LibreTube </string>
    <string name="installmetro">Установка Метро </string>
    <string name="installcheck">Установить Чекскан </string>
    <string name="installmax">Установить мессенджер MAX </string>
    <string name="downloadmaxrofile">Скачать MAX PROFILE </string>
    <string name="installmaxprofile">Установить MAX PROFILE </string>
    <string name="downloadmynalogprofile">Скачать Мои налог profile </string>
    <string name="installmynalogprofile">Установить Мои налог profile </string>
    <string name="installmynalog">Установить Мои налог </string>
    <string name="installmegafon">Установить Мегафон </string>
    <string name="installrustore">Установить RuStore </string>
    <string name="installpsb">Установить ПСБ-Банк </string>
    <string name="installamnezia" >Установить AmneziaVPN </string>

</resources>